tests/errors/infer_walrus_redecl_01.f90
program infer_walrus_redecl_01
    implicit none
    x := 5
    x := 10
end program
